--- a/resources/typescript-util/makefile
+++ b/resources/typescript-util/makefile
@@ -1,3 +1,7 @@
+PROGRAM_NAME	=  "@@PROJECT@@"
+RESOURCES_DIR   =  $(HOME)/.resources
+BIN_INSTALL_DIR =  $(HOME)/bin
+
 compile_main:
 	tsc index.ts 
 
@@ -6,4 +10,16 @@ clean:
 
 document:
 	autodoc *.ts
+
+install:
+	mkdir -p $(RESOURCES_DIR)/$(PROGRAM_NAME)
+	cp -r resources/* $(RESOURCES_DIR)/$(PROGRAM_NAME)
+	cp -r main.sh $(BIN_INSTALL_DIR)/$(PROGRAM_NAME)
+
+uninstall:
+	rm -rf $(RESOURCES_DIR)/$(PROGRAM_NAME)
+	rm $(BIN_INSTALL_DIR)/$(PROGRAM_NAME)
+
+document:
+	autodoc main.sh
 
